--- a/dashboard/candash-flex.Rmd
+++ b/dashboard/candash-flex.Rmd
@@ -3,9 +3,8 @@ title: "CanDash (a minimal cannabis dashboard)"
 author: "Martin Frigaard"
 output: 
   flexdashboard::flex_dashboard:
-    orientation: rows
+    orientation: columns
     social: menu
-    source_code: embed
 runtime: shiny
 ---
 
@@ -15,155 +14,160 @@ library(flexdashboard)
 library(shiny)
 library(tidyverse)
 library(magrittr)
-```
-
-```{r load-data, echo=FALSE}
 # fs::dir_tree("data/processed/")
-# load these data into the dashboard
-CannabisWowData <- read_csv("data/processed/2020-03-17-CannabisWowData.csv")
+# load the data into the dashboard
+CanData <- readr::read_csv("data/processed/2020-03-19-CannabisWowData.csv")
+MonLocSales <- readr::read_csv("data/processed/2020-03-19-MonthlyLocationSales.csv")
+WeekOverWeek <- readr::read_csv("data/processed/2020-03-19-WeekOverWeek.csv")
 ```
 
 
-Inputs {.sidebar}
+Column {data-width=600}
 -----------------------------------------------------------------------
 
-```{r yearNum-dateRangeInput, eval=TRUE}
-# define yearNum inputId -----
-dateRangeInput(
-            inputId = "dateNum",
-            label = h3("Sales Date"),
-               start = "2019-12-01", 
-               end = "2020-12-31",
-               min = "2020-01-04",
-               max = "2020-12-23", 
-               format = "yyyy-mm-dd", 
-               startview = "month", 
-               weekstart = 0,
-               language = "en", 
-               separator = " to ", 
-               width = NULL)
-```
+### Top 20 Cannabis Brands
 
-
-```{r component-selectInput, eval=FALSE}
-selectInput(inputId = "component",
-                    selected = "component_01",
-                    label = "Component (1-11)",
-                    choices = levels(SparkComp$comp_key),
-                    multiple = FALSE)
-```
-
-Select the project `date` to see the `value` and per `component` on Spark projects. 
-
-Row
------------------------------------------------------------------------
-
-### Heatmap
-
-```{r heatmap-date, eval=TRUE}
-# define reactive
-HeatMapData <- reactive({
-        
+```{r top-20-brands, eval=TRUE}
+# create reactive
+Top20React <- reactive({
   # rename this reactive to generic data
+        data <- CanData
         
-        data <- SparkComp
-        
-        # subset this by the year the user selects
-        # this might be a little faster if we change the
-        # functions to dplyr instead of base R functions
-        
-        data <- dplyr::filter(
-           
-            data,
-            
-            date >= input$yearNum[1] & date <= input$yearNum[2]
-        ) 
-        
-        data <- data %>% 
           
-            group_by(year_qtr, comp_val) %>% 
-  
-            summarise(value_year_qtr = sum(value)) %>% 
-  
-            inner_join(., y = data, 
-                       
-                       by = c("year_qtr","comp_val")) 
+          data <- dplyr::count(data, brand) %>%
           
-        data
+          utils::head(10) %>% 
+          
+          dplyr::mutate(brand = reorder(brand, n))
+          
+          data
+        
     })
+
 # render plot with reactive -----
 renderPlot({
-
-        data <- HeatMapData()
-        
-        data %>% 
-
-            ggplot(aes(x = year_qtr,
-                       
-                       y = comp_val,
-                       
-                       fill = value_year_qtr)) +
-          
-            geom_tile() +
-          
-            theme(axis.text.x = element_text(angle = -45,
-                                             vjust = 1.00,
-                                             hjust = 0.20),
-                  legend.position = "top") +
-                  ylab(NULL) +
-                  xlab("Year - quarter")
-    })
-```
-
-
-Row
------------------------------------------------------------------------
-
-```{r geom_line-status-week, eval=TRUE}
-LinePlotData <- reactive({
-        
-  # rename this reactive to generic data
-        
-        data <- SparkComp
-        
-        # subset this by the year the user selects
-        # this might be a little faster if we change the
-        # functions to dplyr instead of base R functions
-        
-        data <- dplyr::filter(
-           
-            data,
-            
-            date >= input$yearNum[1] & date <= input$yearNum[2]
-        ) 
-        
-        data <- data %>% 
-          
-              group_by(month) %>% 
   
-               summarise(value_month = sum(value)) %>% 
+  data <- Top20React()
   
-               inner_join(., y = data, by = c("month"))
-          
-        data
-    })
-
-renderPlot({
-  
-data <- LinePlotData() 
-
-data %>% 
-    
-  ggplot2::ggplot(aes(y = value_month, 
+    data %>% 
+      
+      ggplot2::ggplot(aes(x = brand, y = n)) +
+      
+        ggplot2::geom_col(aes(fill = brand), 
+                          
+                          show.legend = FALSE) +
+      
+        ggplot2::labs(x = "Brands",
                       
-                      x = month)) +
-  geom_point() +
-        ylab("Value") +
-        xlab("Month")
+                      y = "Count",
+                      
+                      title = "Top 20 Cannabis Brands") +
+      
+        ggplot2::coord_flip()
 })
 ```
 
 
+### Week over week sales 
+
+```{r wow-plot}
+# create reactive
+WowReact <- reactive({
+  # rename this reactive to generic data
+        data <- WeekOverWeek
+        
+          
+          data <- tidyr::drop_na(data = data)
+          
+          data
+        
+    })
+  # these are the labels
+labs_wow_annual_sales <- ggplot2::labs(
+  y = 'Sales', 
+  x = 'Week', 
+  title = 'Week Over Week Annual Sales',
+  subtitle = "Simulated Cannabis Sales Data",
+  caption = "graphic and analysis by PDG") 
 
 
+# render plot with reactive -----
+renderPlot({
+  
+   data <- WowReact()
+   
+   data %>% 
+  
+  # this will put week_year on the x
+    ggplot2::ggplot(aes(x = week_year, 
+                        # and the week over week quantity on the y
+                        y = wow_quantity)) +
+  # add the line plot
+    ggplot2::geom_line() +
+  # and the point
+    ggplot2::geom_point() +
+  # the axis title here will inherit the size and color
+    ggplot2::theme(axis.title = element_text(face = c("bold"))) +
+  # this will remove the legend
+    ggplot2::theme(legend.title = element_blank()) +
+  # this adds the percent on the y axis
+    ggplot2::scale_y_continuous(labels = 
+                                  scales::percent_format(accuracy = 1),) +
+  # here we facet by the month
+    ggplot2::facet_wrap(. ~ month, 
+                        # 
+                        scales = "free") + 
+    ggplot2::theme(axis.text.x = 
+                     element_text(angle = 45, 
+                                  hjust = 0.5, 
+                                  vjust = 0.5)) +
+  labs_wow_annual_sales
+})
+```
 
+
+Column {.tabset data-width=400}
+-----------------------------------------------------------------------
+
+### Sales by Category
+
+```{r treemap}
+library(highcharter)
+library(viridisLite)
+library(treemap)
+
+thm <- 
+  hc_theme(
+    colors = c("#1a6ecc", "#434348", "#90ed7d"),
+    chart = list(
+      backgroundColor = "transparent",
+      style = list(fontFamily = "Ubuntu")
+    ),
+    xAxis = list(
+      gridLineWidth = 1
+    )
+  )
+
+GroupedCanData <- CanData %>%
+  dplyr::group_by(brand_category, quantity) %>% 
+  dplyr::summarise(sales_by_cat = n()) %>% 
+  dplyr::ungroup() %>% 
+  dplyr::sample_n(20)
+# GroupedCanData
+
+highcharter::hctreemap2(GroupedCanData, 
+              group_vars = c("brand_category"),
+              size_var = "sales_by_cat", 
+              color_var = "sales_by_cat",
+              layoutAlgorithm = "squarified",
+              levelIsConstant = FALSE,
+              allowDrillToNode = TRUE,
+              palette = rev(viridis(6))) %>% 
+  hc_add_theme(thm)
+```
+
+### Best Sellers
+
+```{r barchart}
+
+```
